FIXED SCROLLTOTOP POSITION ON MOBILE

--- a/style.css
+++ b/style.css
@@ -291,6 +291,9 @@ footer p {
     footer p {
         display: none;
     }
+    #scrollToTop {
+        margin-bottom: 10vh;
+    }
 }
 @media screen and (min-width: 1281px) {
     .navmenu_mobile {
